bring back try-with-resources, replace Paths.get() with Path.of()